--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
+
 {
-      "name": "Website Builder",
+      "name": "parking-management-system---dbms-project",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
